use ioredis now (to prepare for cluster& sentinel)

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jade": "1.11.0",
     "body-parser ": "1.15.2",
     "uuid": "2.0.3",
-    "redis": "2.6.3",
+    "ioredis": "2.4.3",
     "commander": "2.9.0",
     "pretty-hrtime": "1.0.3"
   },
