--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keuss",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "keywords": ["queue", "job"],
   "homepage":"https://github.com/pepmartinez/keuss",
   "bugs": {
@@ -23,7 +23,8 @@
     "winston": "2.3.1",
     "uuid": "3.1.0",
     "ioredis": "3.1.1",
-    "commander": "2.10.0"
+    "commander": "2.10.0",
+    "mitt": "1.1.2"
   },
   "devDependencies": {
     "mocha":"3.4.2",
