--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keuss",
-  "version": "1.0.6",
-  "keywords": ["queue", "job"],
+  "version": "1.1.0",
+  "keywords": ["queue", "job", "mongodb", "redis", "HA"],
   "homepage":"https://github.com/pepmartinez/keuss",
   "bugs": {
     "url" : "https://github.com/pepmartinez/keuss/issues",
