--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
   "name": "keuss",
   "version": "1.1.0",
-  "keywords": ["queue", "job", "mongodb", "redis", "HA"],
-  "homepage":"https://github.com/pepmartinez/keuss",
+  "keywords": [
+    "queue",
+    "job",
+    "mongodb",
+    "redis",
+    "HA"
+  ],
+  "homepage": "https://github.com/pepmartinez/keuss",
   "bugs": {
-    "url" : "https://github.com/pepmartinez/keuss/issues",
-    "email" : "pep.martinez@gmail.com"
+    "url": "https://github.com/pepmartinez/keuss/issues",
+    "email": "pep.martinez@gmail.com"
   },
-  "repository": { 
-    "type" : "git",
-    "url" : "https://github.com/pepmartinez/keuss.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pepmartinez/keuss.git"
   },
-  "author": { 
-    "name" : "Jose Luis Martinez Juan",
-    "email" : "pep.martinez@gmail.com"
+  "author": {
+    "name": "Jose Luis Martinez Juan",
+    "email": "pep.martinez@gmail.com"
   },
-  "license" : "GPL-3.0",
+  "license": "GPL-3.0",
   "dependencies": {
     "async": "2.5.0",
     "mongodb": "2.2.29",
     "lodash": "4.17.4",
-    "winston": "2.3.1",
     "uuid": "3.1.0",
     "ioredis": "3.1.1",
     "commander": "2.10.0",
     "mitt": "1.1.2"
   },
   "devDependencies": {
-    "mocha":"3.4.2",
-    "should":"11.2.1",
-    "random-to":"0.0.2"
+    "mocha": "3.4.2",
+    "should": "11.2.1",
+    "random-to": "0.0.2"
   },
   "scripts": {
     "test": "mocha --reporter spec --check-leaks --no-timeouts test/"
