--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "license": "GPL-3.0",
   "dependencies": {
     "async": "2.6.0",
-    "mongodb": "2.2.33",
-    "lodash": "4.17.4",
-    "uuid": "3.2.1",
-    "ioredis": "3.2.2",
     "commander": "2.13.0",
-    "mitt": "1.1.3"
+    "ioredis": "3.2.2",
+    "lodash": "4.17.4",
+    "mitt": "1.1.3",
+    "mongodb": "2.2.34",
+    "uuid": "3.2.1",
+    "why-is-node-running": "^1.2.3"
   },
   "devDependencies": {
     "mocha": "5.0.0",
