--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lodash": "4.17.4",
     "mitt": "1.1.3",
     "mongodb": "2.2.34",
-    "uuid": "3.2.1"
+    "uuid": "3.2.1",
+    "mubsub": "1.4.0"
   },
   "devDependencies": {
     "mocha": "5.0.0",
