--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "keuss",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "keywords": [
     "queue",
+    "persistent",
     "job",
     "mongodb",
     "redis",
