--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "async": "2.6.1",
-    "ioredis": "3.2.2",
-    "lodash": "4.17.11",
-    "mitt": "1.1.3",
-    "mongodb": "2.2.34",
-    "uuid": "3.2.1",
-    "mubsub": "1.4.0"
+    "async": "~2.6.1",
+    "ioredis": "~4.6.2",
+    "lodash": "~4.17.11",
+    "mitt": "~1.1.3",
+    "mongodb": "~2.2.34",
+    "uuid": "~3.3.2",
+    "mubsub": "~1.4.0"
   },
   "devDependencies": {
-    "mocha": "5.0.0",
+    "mocha": "~5.2.0",
     "random-to": "0.0.2",
-    "should": "13.2.1"
+    "should": "~13.2.1"
   },
   "scripts": {
     "test": "mocha --reporter spec --check-leaks --no-timeouts --exit test/"
