--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mitt": "~1.1.3",
     "mongodb": "~2.2.34",
     "uuid": "~3.3.2",
-    "mubsub": "~1.4.0"
+    "mubsub": "~1.4.0",
+    "debug": "~4.1.1"
   },
   "devDependencies": {
     "mocha": "~5.2.0",
