--- a/examples/webhooks/package.json
+++ b/examples/webhooks/package.json
@@ -17,6 +17,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "express": "~4.17.1",
-    "body-parser": "~1.19.0"
+    "body-parser": "~1.19.0",
+    "superagent": "~5.2.2"
   }
 }
