--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "mitt": "~1.1.3",
     "mongodb": "~3.2.6",
     "uuid": "~3.3.2",
-    "mubsub": "~1.4.0",
+    "@nodebb/mubsub": "~1.6.0",
     "debug": "~4.1.1",
     "async-lock": "~1.1.4",
     "minimist": "~1.2.5"
