changed homepage in package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pipeline",
     "bucket"
   ],
-  "homepage": "https://github.com/pepmartinez/keuss",
+  "homepage": "https://pepmartinez.github.io/keuss/",
   "bugs": {
     "url": "https://github.com/pepmartinez/keuss/issues",
     "email": "pep.martinez@gmail.com"
