--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keuss",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "keywords": [
     "queue",
     "persistent",
@@ -26,19 +26,19 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "@nodebb/mubsub": "~1.6.2",
     "async": "~3.2.0",
+    "async-lock": "~1.2.4",
+    "debug": "~4.1.1",
     "ioredis": "~4.17.3",
-    "lodash": "~4.17.20",
+    "lodash": "~4.17.21",
     "mitt": "~2.1.0",
     "mongodb": "~3.5.9",
-    "uuid": "~8.3.0",
-    "@nodebb/mubsub": "~1.6.2",
-    "debug": "~4.1.1",
-    "async-lock": "~1.2.4"
+    "uuid": "~8.3.0"
   },
   "devDependencies": {
-    "mocha": "~8.1.3",
     "chance": "~1.1.7",
+    "mocha": "~8.4.0",
     "should": "~13.2.3"
   },
   "scripts": {
