--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "lodash": "~4.17.21",
     "mitt": "~3.0.0",
     "mongodb": "~4.5.0",
-    "uuid": "~8.3.2"
+    "uuid": "~8.3.2",
+    "why-is-node-running": "^2.2.2"
   },
   "devDependencies": {
     "chance": "~1.1.8",
@@ -43,6 +44,6 @@
   },
   "scripts": {
     "test": "mocha --reporter spec --check-leaks --no-timeouts --exit test/",
-    "test-with-coverage": "nyc --reporter=text -- mocha --reporter spec --check-leaks --no-timeouts --exit test/"
+    "test-with-coverage": "nyc --reporter=html -- mocha --reporter spec --check-leaks --no-timeouts --exit test/"
   }
 }
