--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-website",
-  "version": "0.0.0",
+  "name": "keuss-docusaurus",
+  "version": "1.6.15",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
