some more info on log

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chance": "~1.1.8",
     "mocha": "~10.2.0",
     "should": "~13.2.3",
+    "nyc": "~15.1.0",
     "why-is-node-running": "^2.2.2"
   },
   "scripts": {
