--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "lodash": "~4.17.21",
     "mitt": "~3.0.0",
     "mongodb": "~4.17.0",
-    "uuid": "~8.3.2"
+    "uuid": "~8.3.2",
+    "pg": "~8.11.5"
   },
   "devDependencies": {
     "chance": "~1.1.11",
