--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "keuss",
-  "version": "1.7.4",
+  "version": "2.0.0",
   "keywords": [
     "queue",
     "persistent",
     "job",
     "mongodb",
+    "postgres",
+    "postgresql",
     "redis",
     "HA",
     "pipeline",
@@ -27,19 +29,19 @@
   "license": "MIT",
   "dependencies": {
     "@nodebb/mubsub": "~1.8.0",
-    "async": "~3.2.4",
-    "async-lock": "~1.3.1",
-    "debug": "~4.3.4",
-    "ioredis": "~5.3.2",
+    "async": "~3.2.5",
+    "async-lock": "~1.4.1",
+    "debug": "~4.3.5",
+    "ioredis": "~5.4.1",
     "lodash": "~4.17.21",
-    "mitt": "~3.0.0",
+    "mitt": "~3.0.1",
     "mongodb": "~4.17.0",
     "uuid": "~8.3.2",
-    "pg": "~8.11.5"
+    "pg": "~8.12.0"
   },
   "devDependencies": {
     "chance": "~1.1.11",
-    "mocha": "~10.2.0",
+    "mocha": "~10.4.0",
     "should": "~13.2.3",
     "nyc": "~15.1.0",
     "why-is-node-running": "^2.2.2"
