more stringent npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,11 @@
-wrk-put.lua
 .vscode/
-docusaurus
-coverage
-.nyc_output
+.nyc_output/
+.github/
+bench/
+coverage/
+docker-compose/
+docusaurus/
+examples/
+playground/
+test/
+docker-compose.yaml
